--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,8 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+RELEASE_STORE_FILE=/Users/nuhacettraviesodelrosario/Desktop/KeyStore.jks
+RELEASE_STORE_PASSWORD=juancanuha
+RELEASE_KEY_ALIAS=KeyStore
+RELEASE_KEY_PASSWORD=juancanuha
